--- a/translations/buildings.de.xlf
+++ b/translations/buildings.de.xlf
@@ -930,7 +930,7 @@
     </unit>
     <unit id="FXAUu02" name="Die AP-Kosten aller Bauprojekte werden um 5% gesenkt.">
       <notes>
-        <note category="german">Die AP-Kosten aller Bauprojekte werden um 5% gesenkt.</note>
+        <note category="german">Die AP-Kosten aller Bauprojekte werden um 6% gesenkt.</note>
       </notes>
       <segment>
         <source>Die AP-Kosten aller Bauprojekte werden um 5% gesenkt.</source>
@@ -939,7 +939,7 @@
     </unit>
     <unit id="RpqPbZr" name="Die AP-Kosten aller Bauprojekte werden um 10% gesenkt.">
       <notes>
-        <note category="german">Die AP-Kosten aller Bauprojekte werden um 10% gesenkt.</note>
+        <note category="german">Die AP-Kosten aller Bauprojekte werden um 12% gesenkt.</note>
       </notes>
       <segment>
         <source>Die AP-Kosten aller Bauprojekte werden um 10% gesenkt.</source>
@@ -948,7 +948,7 @@
     </unit>
     <unit id="xQHKrzW" name="Die AP-Kosten aller Bauprojekte werden um 15% gesenkt.">
       <notes>
-        <note category="german">Die AP-Kosten aller Bauprojekte werden um 15% gesenkt.</note>
+        <note category="german">Die AP-Kosten aller Bauprojekte werden um 18% gesenkt.</note>
       </notes>
       <segment>
         <source>Die AP-Kosten aller Bauprojekte werden um 15% gesenkt.</source>
@@ -957,7 +957,7 @@
     </unit>
     <unit id="SAknSq2" name="Die AP-Kosten aller Bauprojekte werden um 20% gesenkt.">
       <notes>
-        <note category="german">Die AP-Kosten aller Bauprojekte werden um 20% gesenkt.</note>
+        <note category="german">Die AP-Kosten aller Bauprojekte werden um 24% gesenkt.</note>
       </notes>
       <segment>
         <source>Die AP-Kosten aller Bauprojekte werden um 20% gesenkt.</source>
@@ -966,7 +966,7 @@
     </unit>
     <unit id="1dzbsZW" name="Die AP-Kosten aller Bauprojekte werden um 25% gesenkt.">
       <notes>
-        <note category="german">Die AP-Kosten aller Bauprojekte werden um 25% gesenkt.</note>
+        <note category="german">Die AP-Kosten aller Bauprojekte werden um 30% gesenkt.</note>
       </notes>
       <segment>
         <source>Die AP-Kosten aller Bauprojekte werden um 25% gesenkt.</source>
@@ -3261,7 +3261,7 @@
     </unit>
     <unit id="R.TLWup" name="aed3fec">
       <notes>
-        <note category="german">Die AP-Kosten aller Bauprojekte werden um 20% gesenkt. Erhöht die Effektivität von Reparaturen um einen Punkt.</note>
+        <note category="german">Die AP-Kosten aller Bauprojekte werden um 24% gesenkt. Erhöht die Effektivität von Reparaturen um einen Punkt.</note>
       </notes>
       <segment>
         <source>Die AP-Kosten aller Bauprojekte werden um 20% gesenkt. Erhöht die Effektivität von Reparaturen um einen Punkt.</source>
@@ -3270,7 +3270,7 @@
     </unit>
     <unit id="JLugykh" name="124a889">
       <notes>
-        <note category="german">Die AP-Kosten aller Bauprojekte werden um 25% gesenkt. Erhöht die Effektivität von Reparaturen um zwei Punkte.</note>
+        <note category="german">Die AP-Kosten aller Bauprojekte werden um 30% gesenkt. Erhöht die Effektivität von Reparaturen um zwei Punkte.</note>
       </notes>
       <segment>
         <source>Die AP-Kosten aller Bauprojekte werden um 25% gesenkt. Erhöht die Effektivität von Reparaturen um zwei Punkte.</source>
@@ -3347,6 +3347,24 @@
       <segment>
         <source>Die Verringerung der Fundchancen bei Nacht wird auf der gesamten Karte negiert, pro Tag werden 2 Batterien verbraucht.</source>
         <target>Die Verringerung der Fundchancen bei Nacht wird auf der gesamten Karte negiert, pro Tag werden 2 Batterien verbraucht.</target>
+      </segment>
+    </unit>
+    <unit id="nvB5DhN" name="c783d04">
+      <notes>
+        <note category="german">Die Verringerung der Fundchancen bei Nacht wird im Umkreis von 2km um die Stadt negiert.</note>
+      </notes>
+      <segment>
+        <source>Die Verringerung der Fundchancen bei Nacht wird im Umkreis von 2km um die Stadt negiert.</source>
+        <target>Die Verringerung der Fundchancen bei Nacht wird im Umkreis von 2km um die Stadt negiert.</target>
+      </segment>
+    </unit>
+    <unit id="i9EymZs" name="Kein besonderer Bonus">
+      <notes>
+        <note category="german">Kein besonderer Bonus</note>
+      </notes>
+      <segment>
+        <source>Kein besonderer Bonus</source>
+        <target>Kein besonderer Bonus</target>
       </segment>
     </unit>
   </file>
