--- a/translations/global.fr.xlf
+++ b/translations/global.fr.xlf
@@ -2706,5 +2706,23 @@
         <target>Avatar</target>
       </segment>
     </unit>
+    <unit id="hDhyhlE" name="Gruppe aus %num% Spielern">
+      <notes>
+        <note category="german">Gruppe aus %num% Spielern</note>
+      </notes>
+      <segment>
+        <source>Gruppe aus %num% Spielern</source>
+        <target>Groupe de %num% joueurs</target>
+      </segment>
+    </unit>
+    <unit id="o8cBnVX" name="5048423">
+      <notes>
+        <note category="german">Wenn Bürger deine Stadt betreten möchten, wird ein Zugangsdode abgefragt. Nur mit korrektem Zugangscode erhalten sie Zutritt. Verteile den Zugangscode darum an die Spieler, die du einladen möchtest. &lt;strong&gt;Und benutze nicht dein privates Passwort als Zugangscode!!!&lt;/strong&gt;</note>
+      </notes>
+      <segment>
+        <source>Wenn Bürger deine Stadt betreten möchten, wird ein Zugangsdode abgefragt. Nur mit korrektem Zugangscode erhalten sie Zutritt. Verteile den Zugangscode darum an die Spieler, die du einladen möchtest. &lt;strong&gt;Und benutze nicht dein privates Passwort als Zugangscode!!!&lt;/strong&gt;</source>
+        <target><![CDATA[Ce mot de passe sera demandé à tout citoyen désireux de rejoindre cette ville. Distribuez-le aux personnes que vous souhaitez inviter. <strong>N'utilisez pas votre mot de passe personnel !!!</strong>]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
