--- a/translations/soul.fr.xlf
+++ b/translations/soul.fr.xlf
@@ -2711,5 +2711,23 @@
                                                     Déplacez la section avec la souris et agrandissez-la ou réduisez-la avec la molette de la souris.</target>
       </segment>
     </unit>
+    <unit id="ff37B3l" name="Du hast aktuell noch keine Plätze reserviert.">
+      <notes>
+        <note category="german">Du hast aktuell noch keine Plätze reserviert.</note>
+      </notes>
+      <segment>
+        <source>Du hast aktuell noch keine Plätze reserviert.</source>
+        <target>Vous n'avez encore réservé aucune place.</target>
+      </segment>
+    </unit>
+    <unit id="Zk.3Qol" name="Reservierte Plätze:">
+      <notes>
+        <note category="german">Reservierte Plätze:</note>
+      </notes>
+      <segment>
+        <source>Reservierte Plätze:</source>
+        <target>Places réservées:</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
