--- a/translations/global.de.xlf
+++ b/translations/global.de.xlf
@@ -2662,5 +2662,23 @@
         <target>Avatar</target>
       </segment>
     </unit>
+    <unit id="hDhyhlE" name="Gruppe aus %num% Spielern">
+      <notes>
+        <note category="german">Gruppe aus %num% Spielern</note>
+      </notes>
+      <segment>
+        <source>Gruppe aus %num% Spielern</source>
+        <target>Gruppe aus %num% Spielern</target>
+      </segment>
+    </unit>
+    <unit id="o8cBnVX" name="5048423">
+      <notes>
+        <note category="german">Wenn Bürger deine Stadt betreten möchten, wird ein Zugangsdode abgefragt. Nur mit korrektem Zugangscode erhalten sie Zutritt. Verteile den Zugangscode darum an die Spieler, die du einladen möchtest. &lt;strong&gt;Und benutze nicht dein privates Passwort als Zugangscode!!!&lt;/strong&gt;</note>
+      </notes>
+      <segment>
+        <source>Wenn Bürger deine Stadt betreten möchten, wird ein Zugangsdode abgefragt. Nur mit korrektem Zugangscode erhalten sie Zutritt. Verteile den Zugangscode darum an die Spieler, die du einladen möchtest. &lt;strong&gt;Und benutze nicht dein privates Passwort als Zugangscode!!!&lt;/strong&gt;</source>
+        <target><![CDATA[Wenn Bürger deine Stadt betreten möchten, wird ein Zugangsdode abgefragt. Nur mit korrektem Zugangscode erhalten sie Zutritt. Verteile den Zugangscode darum an die Spieler, die du einladen möchtest. <strong>Und benutze nicht dein privates Passwort als Zugangscode!!!</strong>]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
