--- a/translations/buildings.en.xlf
+++ b/translations/buildings.en.xlf
@@ -2806,7 +2806,7 @@
       </notes>
       <segment>
         <source>Diese Waffenwerkstatt ist euer Trumpf für die Nachtwache. Wird sie gebaut, wird jede Waffe, die während der Wacht zum Einsatz kommt um 20% verstärkt.</source>
-        <target>This armory is a genuine top trump for watchmen. By building it, every weapon used during the nights watcjh will have its effectiveness boosted by 20%!</target>
+        <target>This armory is a genuine top trump for watchmen. By building it, every weapon used during the night's watch will have its effectiveness boosted by 20%!</target>
       </segment>
     </unit>
     <unit id="gpk5Kg3" name="f9257d7">
@@ -2815,7 +2815,7 @@
       </notes>
       <segment>
         <source>Dieser kleine Laden verbessert die Effektivität jedes Möbelstücks, das auf der Wache benutzt wird um 20%. Hach ja, die Schweden... Nie gab es bessere Billigmöbel!</source>
-        <target>This small store allows all furniture being used on the nights watch to become 20% more effective. Ah the Swedes... DIY masters of the universe!</target>
+        <target>This small store allows all furniture being used on the night's watch to become 20% more effective. Ah the Swedes... DIY masters of the universe!</target>
       </segment>
     </unit>
     <unit id="sZyLLG6" name="2612909">
