--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -3956,7 +3956,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Ermordung durch Gift</source>
-        <target>Injected with a poison !</target>
+        <target>Injected with a poison!</target>
       </segment>
     </unit>
     <unit id="q6r0JuY" name="283aad7">
@@ -16493,7 +16493,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>gering</source>
-        <target>gering</target>
+        <target>low</target>
       </segment>
     </unit>
     <unit id=".CQK_8d" name="hoch">
@@ -16502,7 +16502,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>hoch</source>
-        <target>hoch</target>
+        <target>significant</target>
       </segment>
     </unit>
     <unit id="ssHCx3q" name="1d82f8e">
@@ -16511,7 +16511,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Die Chance, beim Verschlingen eines Bürgers entdeckt zu werden, ist %chances%...</source>
-        <target>Die Chance, beim Verschlingen eines Bürgers entdeckt zu werden, ist %chances%...</target>
+        <target>If you devour a citizen, your chances of being discovered are %chances%...</target>
       </segment>
     </unit>
     <unit id="qD3lUP9" name="dc1e0ac">
@@ -16520,7 +16520,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Das Risiko basiert auf der Anzahl der Bürger in der Aussenwelt. Je mehr Bürger sich außerhalb der Stadt aufhalten, desto geringer sind die Chancen, entdeckt zu werden.</source>
-        <target>Das Risiko basiert auf der Anzahl der Bürger in der Aussenwelt. Je mehr Bürger sich außerhalb der Stadt aufhalten, desto geringer sind die Chancen, entdeckt zu werden.</target>
+        <target>This risk depends directly on the number of citizens that have gone into the world beyond: The smaller the number of citizens remaining in town, the lower your chances of being seen will be.</target>
       </segment>
     </unit>
     <unit id="8yLsMnc" name="1f8ca6f">
@@ -16574,7 +16574,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Wasserwaffen-Spezialist</source>
-        <target>"H2Operative</target>
+        <target>H2Operative</target>
       </segment>
     </unit>
     <unit id="dNzdcfT" name="Hydraulik-Engineering">
@@ -17213,7 +17213,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Du hast dich in einen %role% verwandelt!</source>
-        <target>Du hast dich in einen %role% verwandelt!</target>
+        <target>You have been transformed into a %role%!</target>
       </segment>
     </unit>
     <unit id="41EQiml" name="Erzähle niemandem davon oder du wirst sofort erschossen!">
@@ -17222,7 +17222,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Erzähle niemandem davon oder du wirst sofort erschossen!</source>
-        <target>Erzähle niemandem davon oder du wirst sofort erschossen!</target>
+        <target>Don't tell anyone as you will just as soon be killed!</target>
       </segment>
     </unit>
     <unit id=".S3ibaS" name="Wie man als Ghul spielt ?">
@@ -17231,7 +17231,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Wie man als Ghul spielt ?</source>
-        <target>Wie man als Ghul spielt ?</target>
+        <target>How do I play as a ghoul?</target>
       </segment>
     </unit>
     <unit id="sZoC__." name="Der Bürger weigert sich, dies zu tun...">
@@ -18141,7 +18141,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Mit Hilfe seiner übermenschlichen Heldenkräfte hat %citizen% %kills% Zombie(s) lauthals schreiend und mit bloßen Händen umgebracht!</source>
-        <target>Mit Hilfe seiner übermenschlichen Heldenkräfte hat %citizen% %kills% Zombie(s) lauthals schreiend und mit bloßen Händen umgebracht!</target>
+        <target>Using their Heroic powers, %citizen% has exterminated %kills% zombie(s) with their bare hands, screaming like a banshee!</target>
       </segment>
     </unit>
     <unit id="l8p89Qb" name="Du brauchst noch folgende Gegenstände: %list%.">
@@ -18150,7 +18150,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Du brauchst noch folgende Gegenstände: %list%.</source>
-        <target>Du brauchst noch folgende Gegenstände: %list%.</target>
+        <target>You still need the following items: %list%.</target>
       </segment>
     </unit>
     <unit id="m0B311V" name="7fd4518">
@@ -18168,7 +18168,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Mindestens ein Bürger in deiner Eskorte kann dir nicht folgen. Du musst die Situation in den Griff bekommen... oder die Schwachen zurücklassen.</source>
-        <target>Mindestens ein Bürger in deiner Eskorte kann dir nicht folgen. Du musst die Situation in den Griff bekommen... oder die Schwachen zurücklassen.</target>
+        <target>One or more of the citizens in your group cannot follow you. You will need to check out the situation... or leave the weak behind.</target>
       </segment>
     </unit>
     <unit id="05jR4Sa" name="839740b">
@@ -18186,7 +18186,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Das ist die bestmögliche Schätzung, die wir für diesen Angriff abgeben konnten.</source>
-        <target>Das ist die bestmögliche Schätzung, die wir für diesen Angriff abgeben konnten.</target>
+        <target>This is the best possible estimate we can give for this attack.</target>
       </segment>
     </unit>
     <unit id="tN9xF04" name="32f43f5">
@@ -18195,7 +18195,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>&lt;span&gt;%citizen% hat einen Zombie mit seinen bloßen Händen niedergestreckt!&lt;/span&gt;</source>
-        <target><![CDATA[<span>%citizen% hat einen Zombie mit seinen bloßen Händen niedergestreckt!</span>]]></target>
+        <target><![CDATA[<span>%citizen% took down a zombie with their bare hands!</span>]]></target>
       </segment>
     </unit>
     <unit id="1_rcdLL" name="25675c1">
@@ -18213,7 +18213,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>&lt;span&gt;Wir kontrollieren die Zone ab sofort.&lt;/span&gt;</source>
-        <target><![CDATA[<span>Wir kontrollieren die Zone ab sofort.</span>]]></target>
+        <target><![CDATA[<span>We control the zone from now on.</span>]]></target>
       </segment>
     </unit>
     <unit id="20wAGQf" name="6489b1a">
@@ -18222,7 +18222,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Dein &lt;strong&gt;Trunkenheitszustand&lt;/strong&gt; hilft dir wirklich night weiter. Das ist night gerade einfach, wenn sich alles dreht und du nicht mehr klar siehst</source>
-        <target><![CDATA[Dein <strong>Trunkenheitszustand</strong> hilft dir wirklich night weiter. Das ist night gerade einfach, wenn sich alles dreht und du nicht mehr klar siehst]]></target>
+        <target><![CDATA[Your <strong>sobriety</strong>, or lack thereof, is quite inconvenient. Things become pretty tricky pretty quickly when you're completely wasted...]]></target>
       </segment>
     </unit>
     <unit id="bPobZD0" name="b1b989e">
@@ -18249,7 +18249,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Du kannst in den Foren um Hilfe bitten!</source>
-        <target>Du kannst in den Foren um Hilfe bitten!</target>
+        <target>You can ask for help on the forums!</target>
       </segment>
     </unit>
     <unit id="Eb0twff" name="114340a">
@@ -18276,7 +18276,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Diese Aktion kostet dich 1 AP und die Erfolgsaussichten sind ziemlich gering.</source>
-        <target>Diese Aktion kostet dich 1 AP und die Erfolgsaussichten sind ziemlich gering.</target>
+        <target>This action costs you 1 AP and the chances of success are pretty low.</target>
       </segment>
     </unit>
     <unit id="MIyP62V" name="Dieser Bürger möchte in die Stadt gebracht werden.">
@@ -18384,7 +18384,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Inventar: %citizen%</source>
-        <target>Inventar: %citizen%</target>
+        <target>Inventory of %citizen%</target>
       </segment>
     </unit>
     <unit id="slYhiYZ" name="5d24e48">
