Fix and add ES translations

--- a/translations/global.es.xlf
+++ b/translations/global.es.xlf
@@ -1276,7 +1276,7 @@
       </notes>
       <segment>
         <source>Unangemessene Nachricht blockieren</source>
-        <target>Unangemessene Nachricht blockieren</target>
+        <target>Bloquear un mensaje inapropiado</target>
       </segment>
     </unit>
     <unit id="pqMtvFY" name="Link">
