--- a/translations/items.es.xlf
+++ b/translations/items.es.xlf
@@ -5251,7 +5251,7 @@ Después de varios largos minutos de búsqueda, terminas por encontrar <strong>u
       </notes>
       <segment>
         <source>Diese winzig kleine Dosis Gift reicht aus, um jeden deiner Mitbürger umzubringen. Wenn du es mit etwas Essen oder einer Droge vermischt, oder wenn du es in eine Trinkflasche kippst, ist dieses Gift eine tödliche Waffe.</source>
-        <target>Las pocas gotas que quedan entro mataría a cualquier compañero. Tiene un gran poder de contaminación ya sea en alimentos, estimulantes o una cantimplora...</target>
+        <target>Las pocas gotas que quedan dentro matarían a cualquier compañero. Tiene un gran poder de contaminación, ya sea en alimentos, estimulantes o una cantimplora...</target>
       </segment>
     </unit>
     <unit id="0kqolxN" name="9b56cbe">
