--- a/translations/buildings.en.xlf
+++ b/translations/buildings.en.xlf
@@ -655,7 +655,7 @@
       </notes>
       <segment>
         <source>Der Verteidigungsbonus von Gegenständen in der Bank steigt um 100%.</source>
-        <target>Each defence object in the bank gives 1 defence points to the town.</target>
+        <target>The defence points given by objects in the bank are increased by 100%.</target>
       </segment>
     </unit>
     <unit id="GLo_FzK" name="Der Verteidigungsbonus von Gegenständen in der Bank steigt um 150%.">
@@ -664,7 +664,7 @@
       </notes>
       <segment>
         <source>Der Verteidigungsbonus von Gegenständen in der Bank steigt um 150%.</source>
-        <target>Each defence object in the bank gives 1.5 defence points to the town.</target>
+        <target>The defence points given by objects in the bank are increased by 150%.</target>
       </segment>
     </unit>
     <unit id="l3tFIbP" name="Der Verteidigungsbonus von Gegenständen in der Bank steigt um 200%.">
@@ -673,7 +673,7 @@
       </notes>
       <segment>
         <source>Der Verteidigungsbonus von Gegenständen in der Bank steigt um 200%.</source>
-        <target>Each defence object in the bank gives 2 defence points to the town.</target>
+        <target>The defence points given by objects in the bank are increased by 200%.</target>
       </segment>
     </unit>
     <unit id="FXvZuCC" name="Der Verteidigungsbonus von Gegenständen in der Bank steigt um 250%.">
@@ -682,7 +682,7 @@
       </notes>
       <segment>
         <source>Der Verteidigungsbonus von Gegenständen in der Bank steigt um 250%.</source>
-        <target>Each defence object in the bank gives 2.5 defence points to the town.</target>
+        <target>The defence points given by objects in the bank are increased by 250%.</target>
       </segment>
     </unit>
     <unit id="fPl.xwk" name="Der Verteidigungsbonus von Gegenständen in der Bank steigt um 300%.">
@@ -691,7 +691,7 @@
       </notes>
       <segment>
         <source>Der Verteidigungsbonus von Gegenständen in der Bank steigt um 300%.</source>
-        <target>Each defence object in the bank gives 3 defence points to the town.</target>
+        <target>The defence points given by objects in the bank are increased by 300%.</target>
       </segment>
     </unit>
     <unit id="Vln90x5" name="Steinkanone">
