--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -18796,5 +18796,14 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
         <target><![CDATA[Mit deinem %img_scout% <strong>Tarnanzug</strong> kannst du dich bewegen ohne dabei entdeckt zu werden.]]></target>
       </segment>
     </unit>
+    <unit id="CN1z1xe" name="58ec9c9">
+      <notes>
+        <note category="german">%watchers% Nachtwächter haben am Stadtrand Stellung bezogen. Wild entschlossen haben sie sich vorgenommen, die Stadt gegen die Zombies zu verteidigen.</note>
+      </notes>
+      <segment>
+        <source>%watchers% Nachtwächter haben am Stadtrand Stellung bezogen. Wild entschlossen haben sie sich vorgenommen, die Stadt gegen die Zombies zu verteidigen.</source>
+        <target>%watchers% watchmen were posted to the furthest corners of the town to contain the Horde's attack!</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
