--- a/translations/help.de.xlf
+++ b/translations/help.de.xlf
@@ -4945,7 +4945,7 @@ müssen durchdacht geplant werden.</target>
       </notes>
       <segment>
         <source>Jede Nacht um Mitternacht greifen die Untoten die Stadt an. Die Anzahl der Zombies variiert dabei von Tag zu Tag.</source>
-        <target>Jede Nacht um Mitternacht greifen die Untoten die Stadt an. Die Anzahl der Zombies variiert dabei von Tag zu Tag.</target>
+        <target>Jede Nacht um Mitternacht (UTC+1) greifen die Untoten die Stadt an. Die Anzahl der Zombies variiert dabei von Tag zu Tag.</target>
       </segment>
     </unit>
     <unit id="D4X9Djo" name="España: 01h00">
