EN Translations for Chocolate Cross (name + description)

--- a/translations/buildings.en.xlf
+++ b/translations/buildings.en.xlf
@@ -3292,7 +3292,7 @@
       </notes>
       <segment>
         <source>Schokoladenkreuz</source>
-        <target>Schokoladenkreuz</target>
+        <target>Chocolate Cross</target>
       </segment>
     </unit>
     <unit id="fDHJWJh" name="79667b6">
@@ -3301,7 +3301,7 @@
       </notes>
       <segment>
         <source>Ein wunderschönes Kreuz aus Schokolade, an dem unliebsame (oder lästige) Mitbürger platziert werden können. Ist mal was "anderes" als die klassische Verbannung...</source>
-        <target>Ein wunderschönes Kreuz aus Schokolade, an dem unliebsame (oder lästige) Mitbürger platziert werden können. Ist mal was "anderes" als die klassische Verbannung...</target>
+        <target>A beautiful chocolate cross on which unwelcome (or annoying) fellow citizens can be placed. Something a little "different" than the classic banishment...</target>
       </segment>
     </unit>
   </file>
